--- a/posts/templates/posts/post_detail.html
+++ b/posts/templates/posts/post_detail.html
@@ -1,4 +1,36 @@
-<h1>Post Detail</h1>
+
+
+{% load django_bootstrap5 %}
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    <h1>Post Detail</h1>
+
+    <h1>Post Detail</h1>
 <h3>{{post}}</h3>
 <img src="{{post.image.url}}" alt="">
 <h3>{{post.publish_date}}</h3>
+
+<h1>All Reviews :- ({{reviews|length}})</h1>
+{% for review in reviews %}
+<h4>{{review.user}}-----{{review.content}}-------{{review.publish_date}}</h4>
+
+{% endfor %}
+<form action="" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+   
+    {% bootstrap_form form %}
+
+    {% bootstrap_button button_type="submit" content="Add Review" %}
+    {% bootstrap_button button_type="reset" content="Cancel" %}
+</form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
+</html>
